Fix text wrap in popin UserCard

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -56,6 +56,10 @@ a.wiki {
         white-space: nowrap;
     }
 
+    .UserCard {
+        white-space: normal;
+    }
+
     .item-user-label {
         padding: 1px 10px;
         border-radius: 15px;
